[General] Update revision.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -18,9 +18,9 @@
 </FONT>
 
 <DIV ALIGN=RIGHT><FONT SIZE=4>
-Upstream Version: 2022-12-17-2<BR>
-Qt Port and FM7 series 2024-07-10-tmp<BR>
-FFMPEG 5.1 + liblame 3.100 + libx264-164<BR>
+Upstream Version: 2022-12-22<BR>
+Qt Port and FM7 series 2024-09-09-tmp<BR>
+FFMPEG 6.x + liblame 3.100 + libx264-164<BR>
 @@RevisionString@@
 </FONT></DIV>
 <BR>
@@ -28,7 +28,7 @@ FFMPEG 5.1 + liblame 3.100 + libx264-164<BR>
 <FONT SIZE=4>
 <DIV ALIGN=LEFT>
 <h2>Upstream Author:<BR>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2006,2015,2020,2022,2023 ©TAKEDA Toshiya</h2>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2006,2015,2020,2022,2023,2024 ©TAKEDA Toshiya</h2>
 </DIV>
 <DIV ALIGN=LEFT>
 <B>HP:</B>
@@ -38,7 +38,7 @@ FFMPEG 5.1 + liblame 3.100 + libx264-164<BR>
 </DIV>
 <DIV ALIGN=LEFT>
 <h2>Porting to Qt: <BR>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2015-2023 ©Kyuma Ohta</h2>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2015-2024 ©Kyuma Ohta</h2>
 </DIV>
 </DIV>
 
